<resources>
    <string name="app_name">MM-News</string>
    <string name="title_activity_main2">MM-News</string>
    <string name="dummy_news">တရုတ်က အာရှ၏အကြီးဆုံးသောင်တူးသင်္ဘောဖြစ်သည့် အံ့ဖွယ်ကျွန်းစုတည်ဆောက်ရေး ရေယာဉ်ဟု ဖော်ညွှန်းထားသည့် ဧရာမ သင်္ဘောတစ်စင်းကို ပြသခဲ့ကြောင်း အစိုးရ မီဒီယာ ချိုင်းနားဒေးလီးက နိုဝင်ဘာ ၄ ရက်တွင် ဖော်ပြခဲ့သည်။နိုင်ငံထဲရှိ နေရာအချို့တွင် ကျွန်းတု တည်ဆောက်နိုင်စွမ်းရှိသော  စံချိန်မီ ရေကူးကန် သုံးကန်စာနှင့်ညီမျှ သော တစ်နာရီလျှင် ကုဗမီ တာ ၆၀၀၀ အား တူးယူနိုင်သည့် Tian Kun Hao ဟု အမည်ပေးထားသော ယင်း သင်္ဘောကို နိုင်ငံအရှေ့ပိုင်း ကျန်စု ပြည်နယ် ရှိ ဆိပ်ကမ်းတစ်ခု၌ နိုဝင်ဘာ ၃ ရက်တွင် ပြသခဲ့ခြင်းဖြစ်သည်။</string>
    <string name="btn_comment_news">Comment</string>
    <string name="btn_send_to_news">Send To</string>

    <string name="dummy_news_details">ရန်ကုန်စတော့အိတ်ချိန်းတွင် ရောင်းချနေသည့် သီလဝါရှယ်ယာ၏ စျေးနှုန်းများမှာ စတင်ရောင်းချသည့် တစ်နှစ်ကျော်ကာလအတွင်း အနိမ့်ဆုံးစျေးနှုန်းအဖြစ် ရှယ်ယာတစ်စု ကျပ် ၃၂၀၀ သို့ ထိုးဆင်းခဲ့ကြောင်း နိုဝင်ဘာ ၈ ရက် စျေးကွက်အရောင်းအဝယ် ဖြစ်မှုများအရ သိရသည်။

သီလဝါရှယ်ယာသည် ရှယ်ယာခွဲစိတ်မှုမပြုမီ စတော့အိတ်ချိန်း၌ အဖွင့်စျေး ကျပ် ၄၀၀၀၀ ဖြင့် စတင်ခဲ့သော်လည်း ရောင်းချရမှုတွင် ရှယ်ယာတစ်စု ကျပ် ၅၀၀၀၀ ဖြစ်ကာ အမြင့်ဆုံးစျေးမှာ ရှယ်ယာ တစ်စုကျပ် ရ၀၀၀၀ ဖြစ်ခဲ့ပြီး အနိမ့်ဆုံးစျေးနှုန်းမှာ ရှယ်ယာတစ်စု ကျပ် ၄၁၀၀၀ ဖြစ်ခဲ့သည်။


ရန်ကုန်စတော့အိတ်ချိန်းတွင် ၂၀၁၆ ခုနှစ် အောက်တိုဘာ ၃၀ ရက်မှစတင်ကာ ရှယ်ယာအရောင်းအဝယ်ပြုလုပ်မှု ခေတ္တရပ်ဆိုင်းပြီး ရှယ်ယာခွဲစိတ်မှုပြုကာ နိုဝင်ဘာ ၄ ရက်မှ စတင်၍ ရှယ်ယာတစ်စု လျင် ကျပ် ၅၁၀၀ ဖြင့် ရန်ကုန်စတော့အိတ်ချိန်း၌ ပြန်လည်ရောင်းချခဲ့ရာ ရှယ်ယာတစ်စု ကျပ် ၅၃၀၀ အထိ မြင့်တက်ခဲ့သည်။ ထိုသို့ မြင့်တက်မှုမှ ၂၀၁၇ ခုနှစ် မေ ၂၅ ရက်နှင့် ၂၆ ရက်တွင် သီလဝါရှယ်ယာစျေးနှုန်းကျဆင်းမှု ဆက်လက်ဖြစ်ပေါ်ကာ ရှယ်ယာတစ်စု ကျပ် ၃၈၀၀ သို့ ရောက်ရှိခဲ့သည်။ ထို့ပြင် မေ ၂၉ ရက်တွင် ရှယ်ယာတစ်စု ကျပ် ၃၇၀၀၊ သြဂုတ် ၁၄ ရက်တွင် ကျပ် ၃၆၅၀၊ သြဂုတ် ၁၅ ရက်တွင် ကျပ် ၃၅၅၀ မှ သြဂုတ် ၁၆ ရက် အဖွင့်စျေးတွင် ရှယ်ယာတစ်စု ကျပ် ၃၃၀၀ သို့ ရောက်ရှိကာ နေ့စဉ်စျေးနှုန်းကျဆင်းသည့် အခြေအနေဖြစ်ပေါ်ခဲ့ရာမှ နိုဝင်ဘာ ၈ ရက်တွင် ကျပ် ၃၂၀၀ အထိ စံချိန်တင် ကျဆင်းခဲ့သည်။
သီလဝါရှယ်ယာရှယ်ယာများ တန်ဖိုးကျဆင်းနေချိန်တွင် အဆိုပါရှယ်ယာများကို ၄၅ ရာခိုင်နှုန်းအထိ ပိုင်ဆိုင်ခဲ့သည့် အများပိုင်ကုမ္ပဏီကိုးခု၏ သီလဝါရှယ်ယာ ပိုင်ဆိုင်မှုများလည်း လျော့ကျလာနေသည်။
သီလဝါရှယ်ယာများကို ယခင်က အများပိုင် ကုမ္ပဏီကြီးကိုးခုက အဓိကချုပ်ကိုင်ခဲ့ပြီး  New City Development Public Company Ltd တို့ ဖြစ်သည်။

အဆိုပါ ကုမ္ပဏီများသည် ရှယ်ယာ မခွဲစိတ်မီက ၁၇၅၅၀၀၀ ပိုင်ဆိုင်ပြီး ကုမ္ပဏီတစ်ခုချင်းစီသည် အစုရှယ်ယာ ၁၉၅၀၀၀ တိတိ ပိုင်ဆိုင်ခဲ့ကာ ရှယ်ယာခွဲစိတ်ချိန်တွင် ပျမ်းမျှအားဖြင့် ကုမ္ပဏီတစ်ခုလျှင် ရှယ်ယာ ၁၉၅၀၀၀၀ ပိုင်ဆိုင်မည်ဖြစ်သည်။

လက်ရှိတွင် Myanmar Agribusiness Public Corporation Ltd က ရှယ်ယာ  ၅ ဒသမ ၀၁ ရာခိုင်နှုန်းဖြင့်  ယခင် ငါးရာခိုင်နှုန်းထက် ရှယ်ယာပိုင်ဆိုင်မှု ပိုမိုလာပြီး FMI က ရှယ်ယာ ၁ ဒသမ ၆၅ ၊ Myanmar Sugar Development Public Company Ltd က ရှယ်ယာ ၁ ဒသမ ၂၈ ရာခိုင်နှုန်းဖြင့် ပိုင်ဆိုင်မှုအနည်းဆုံး ဖြစ်လာခဲ့ပြီး ကျန်ကုမ္ပဏီ ခြောက်ခုမှာ ၄ ဒသမ ၅၈ ရာခိုင်နှုန်းမှ ၄ ဒသမ ၉၀ ရာခိုင်နှုန်းအကြား ရှယ်ယာများ ပိုင်ဆိုင်ထားကြောင်း သိရသည်။</string>
    <string name="latest_news">Latest News</string>
    <string name="news_just_for_you">News Just For You</string>
    <string name="favourite_news">Favourite News</string>
    <string name="related_news">Related News</string>
    <string name="dummy_related_news">IS အဖွဲ့သည် မပျက်သုဉ်းသေးသော်လည်း မွတ်စလင်ပိုင်နက်ထူထောင်ရန် စိတ်ကူးသည် ပျက်ပြားသွားပြီဖြစ်</string>

    <string name="transition_name_publication_logo">transition:PUBLICATION_LOGO</string>
    <string name="transition_name_publication_name">transition:PUBLICATION_NAME</string>
    <string name="transition_name_publish_date">transition:PUBLISH_DATE</string>
    <string name="transition_name_favourite_logo">transition:PUBLICATION_NEWS_FAVOURITE</string>
    <string name="msg_generic_no_data">No Data To Display</string>
    <string name="lbl_refersh">Refresh</string>
    <string name="btn_forgot_password"><u><i>Forgot Password</i></u></string>
    <string name="btn_to_register"><u><i>New User? Register</i></u></string>
    <string name="lbl_navigate_to_login"><u><i>Already have account?</i></u></string>
    <string name="hint_enter_phone">Your Phone</string>
    <string name="hint_enter_email">Your Email</string>
    <string name="hint_enter_password">Password</string>
    <string name="lbl_mark_my_home_on_google_map">Mark my home on Google Map</string>
    <string name="btn_add_news">Publish</string>
    <string name="lbl_add_photo">သတင်းဓါတ်ပုံ</string>
    <string name="screen_title_add_news">Publish News</string>
</resources>
