<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="256dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v4.view.ViewPager
                android:id="@+id/vp_news_details_images"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:fitsSystemWindows="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_publication_logo"
                    android:layout_width="@dimen/logo_size"
                    android:layout_height="@dimen/logo_size"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/margin_xlarge"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:src="@drawable/img_publication_logo_placeholder"
                    android:transitionName="@string/transition_name_publication_logo" />

                <TextView
                    android:id="@+id/tv_publication_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/iv_publication_logo"
                    android:layout_marginLeft="@dimen/margin_medium_2"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:layout_toRightOf="@id/iv_publication_logo"
                    android:shadowColor="@color/black"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:text="Eleven Media"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_regular_3x"
                    android:transitionName="@string/transition_name_publication_name" />

                <TextView
                    android:id="@+id/tv_publish_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/tv_publication_name"
                    android:layout_below="@id/tv_publication_name"
                    android:shadowColor="@color/black"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:text="Posted At: Jan 01 -6:30 AM"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_regular_2x"
                    android:transitionName="@string/transition_name_publish_date" />
            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_news_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium_2"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/dummy_news_details"
                android:textColor="@color/primary_text" />

            <TextView
                android:id="@+id/tv_related_news"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/tv_news_details"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:gravity="center_vertical"
                android:text="@string/related_news"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_regular_2x" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_related_news"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rv_related_news_size"
                android:layout_below="@id/tv_related_news"
                android:paddingBottom="80dp" />

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/ll_news_details_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/margin_medium_2">

        <TextView
            android:id="@+id/btn_comment_news"
            style="@style/AccentBorderButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_large_size"
            android:layout_weight="0.7"
            android:drawableLeft="@drawable/ic_chat_bubble_outline_accent_24dp"
            android:gravity="center"
            android:text="@string/btn_comment_news" />

        <TextView
            android:id="@+id/btn_send_to_news"
            style="@style/AccentButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_large_size"
            android:layout_marginLeft="@dimen/margin_medium_2"
            android:layout_weight="0.3"
            android:drawableLeft="@drawable/ic_send_white_24dp"
            android:drawablePadding="@dimen/margin_medium_2"
            android:gravity="center_vertical"
            android:text="@string/btn_send_to_news" />
    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium_2"
        android:src="@drawable/ic_favorite_border_white_24dp"
        app:layout_anchor="@id/appbar_layout"
        app:layout_anchorGravity="right|bottom" />

</android.support.design.widget.CoordinatorLayout>